--- a/src/Doctor/Doctor.css
+++ b/src/Doctor/Doctor.css
@@ -1,28 +1,24 @@
 .App {
-    height: 100vh;
-    width: 1550px;
+    height: 100%;
+    width: 100%;
     display: flex;
     color: white;
   }
   
   .App__Aside {
-    width: 50%;
+    width: 100%;
     background-color: #66DAC7;
   }
   
   .App__Form {
-    width: 50%;
+    width: 100%;
+    height: 100%;
     background-color: #2E4158;
     padding: 25px 40px;
     overflow: auto;
   }
   
-  .PageSwitcher {
-    display: flex;
-    justify-content: flex-end;
-    margin-bottom: 10%;
-  }
-  
+
   .PageSwitcher__Item {
     background-color: #4C5D72;
     color: #9DA6B1;
@@ -78,6 +74,7 @@
   }
   
   .FormField {
+    
     margin-bottom: 40px;
   }
   
